Refinements with meno

--- a/static/wifi.html
+++ b/static/wifi.html
@@ -90,18 +90,18 @@ Modifications:
 <div class="slide image" data-image="images/fullslides/lots_of_people2.jpg">
   <div>
     <section class="topWide dark">
-      <h1>Up to 100 people per AP</h1>
+      <h1>Up to 100 devices per AP</h1>
     </section>
   </div>
 </div>
 
 <div class="slide">
-  <header>Wifi at conferences</header>
+  <header>WIFI at conferences</header>
   <section>
     <ul>
-      <li>Maximum 11 WIFI channels</li>
       <li>Temporary setup</li>
       <li>Many unknowns (building, connection, ...)</li>
+      <li>Maximum 11 WIFI channels – 11 x about 20 MBit/s</li>
       <li>Massive uploads</li>
     </ul>
   </section>
@@ -133,6 +133,7 @@ Modifications:
       <li>Link aggregation</li>
       <li>...based on bandwidth</li>
       <li>...in both directions</li>
+      <li>...on asymmetric connections</li>
     </ul>
   </section>
 </div>
@@ -140,10 +141,10 @@ Modifications:
 <div class="slide image" data-image="images/fullslides/bad_ass.jpg">
   <div>
     <section class="topLeft dark">
-      <h1>First implementation that doesn't suck*</h1>
+      <h1>First implementation*</h1>
     </section>
     <section class="bottomRight dark">
-      <h1>*see mppp</h1>
+      <h1>*as far as we know</h1>
     </section>
   </div>
 </div>
@@ -180,7 +181,6 @@ Modifications:
   <div>
   </div>
 </div>
-
 
 <div class="slide">
   <header>Message over stream protocol</header>
@@ -229,15 +229,6 @@ Queue.prototype.add = function(obj, wait_len, found_fn) {
   </section>
 </div>
 
-
-<div class="slide image" data-image="images/fullslides/congestion3.jpg">
-  <div>
-    <section class="topLeft dark">
-      <h1>Congestion</h1>
-    </section>
-  </div>
-</div>
-
 <div class="slide image" data-image="images/fullslides/joe.jpg">
   <div>
     <section class="topLeft dark">
@@ -252,6 +243,16 @@ Queue.prototype.add = function(obj, wait_len, found_fn) {
   </div>
 </div>
 
+<div class="slide image" data-image="images/fullslides/congestion3.jpg">
+  <div>
+    <section class="topLeft dark">
+      <h1>Congestion</h1>
+    </section>
+  </div>
+</div>
+
+
+
 <div class="slide image" data-image="images/fullslides/social.jpg">
   <div>
     <section class="bottomWide dark">
@@ -260,9 +261,10 @@ Queue.prototype.add = function(obj, wait_len, found_fn) {
   </div>
 </div>
 
-<div class="slide">
-  <header>Demo Social-Traffic</header>
+<div class="slide iframe">
+  <header>Social-Traffic</header>
   <section>
+    <iframe src="about:blank" data-src="../../social-traffic/public/index.html" frameborder=0 style="width:820px;height:500px"></iframe>
   </section>
 </div>
 
@@ -276,7 +278,8 @@ Queue.prototype.add = function(obj, wait_len, found_fn) {
   <header>Pre-Alpha / Post-Vapor</header>
   <section>
     <ul>
-      <li>http://github.com/....</li>
+      <li>https://github.com/mabels/Sashimi/</li>
+      <li>https://github.com/cramforce/social-traffic</li>
     </ul>
   </section>
 </div>
