not c-library kernel device

--- a/static/wifi.html
+++ b/static/wifi.html
@@ -170,7 +170,7 @@ Modifications:
   <section>
     <ul>
       <li>Packet knife</li>
-      <li>Based on Tun C Library –<br> IP packet reading/writing in user space</li>
+      <li>Make use of the kernel tun device<br>IP packet reading/writing in user space</li>
       <li>IP over TCP/IP</li>
       <li>JavaScript API!!!!!</li>
     </ul>
