Prod social traffic uRL

--- a/static/index.html
+++ b/static/index.html
@@ -264,7 +264,7 @@ Queue.prototype.add = function(obj, wait_len, found_fn, test) {
 <div class="slide iframe">
   <header>Social-Traffic</header>
   <section>
-    <iframe src="about:blank" data-src="../../social-traffic/public/index.html" frameborder=0 style="width:820px;height:500px"></iframe>
+    <iframe src="about:blank" data-src="http://social-traffic.streamie.org" frameborder=0 style="width:820px;height:500px"></iframe>
   </section>
 </div>
 
